# agentic-code-generation

./: README.md
coding/: README.md  pyproject.toml
coding/output/: code_and_output.txt
coding/src/coding/: crew.py  main.py
