[project]
name = "coding"
version = "0.1.0"
description = "coding using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
coding = "coding.main:run"
run_crew = "coding.main:run"
train = "coding.main:train"
replay = "coding.main:replay"
test = "coding.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
